cmake_minimum_required(VERSION 3.3)
project(InstanceGenerator)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/)
set(CMAKE_BINARY_DIR  ${PROJECT_SOURCE_DIR}/)
set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/)
set(PROJECT_BINARY_DIR  ${PROJECT_SOURCE_DIR}/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(SOURCE_FILES main.cpp)
add_executable(InstanceGenerator ${SOURCE_FILES})